# PhD-Thesis-Repository

./: Blind_Nav_With_Feeler_Sensors.m  FSM_Classifier_for_Real_Dynamics.m  One_Feeler_Sensor_Sim.m  README.md
catkin_ws/src/shrew_control/: CMakeLists.txt  package.xml
catkin_ws/src/shrew_control/launch/: shrew_control.launch
catkin_ws/src/shrew_robot/: README.md  package.xml
catkin_ws/src/shrew_robot/launch/: shrew_robot.rviz  shrew_robot_gazebo.launch  shrew_robot_rviz.launch
catkin_ws/src/shrew_robot/urdf/: shrew_robot.urdf.xacro
catkin_ws/src/terrain_patches/: CMakeLists.txt
catkin_ws/src/terrain_patches/urdf/: materials.xacro  terrain_patches.urdf.xacro
catkin_ws/src/terrain_patches/worlds/: terrain_patches2.world
shrew_workspace/src/shrew_control/config/: shrew_control.yaml
shrew_workspace/src/shrew_robot/: CMakeLists.txt
shrew_workspace/src/shrew_robot/launch/: shrew_robot_wterrain_gazebo.launch
shrew_workspace/src/shrew_robot/meshes/: shrew_slot.STL  shrew_wheel.STL
shrew_workspace/src/terrain_patches/: README.md  model.config  package.xml
shrew_workspace/src/terrain_patches/launch/: terrain_patches.rviz  terrain_patches_gazebo.launch  terrain_patches_rviz.launch
shrew_workspace/src/terrain_patches/urdf/: terrain_patches_plugin.gazebo
shrew_workspace/src/terrain_patches/worlds/: terrain_patches.world
