<?xml version="1.0"?>
<package format="2">
  <name>shrew_robot</name>
  <version>0.0.0</version>
  <description>The shrew_robot package is for the construction of a 4-wheel-drive robot with a roll and yaw degree of freedom on either end and a translation degree of freedom in the mid-frame of the vehicle, allowing its length to be modified.</description>

  <!-- <maintainer email="Adam.M.Gronewold.TH@Dartmouth.edu">Adam Gronewold</maintainer> -->
  <maintainer email="Adam.M.Gronewold.TH@Dartmouth.edu">Adam Gronewold</maintainer>

  <!-- License tags -->
  <license>AFL-3.0</license>
  <license>>ECL-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- Export tag -->
  <export>
  </export>
</package>
